Refactor button listener to accept the room number via command line argument

--- a/code/ButtonListener/makefile
+++ b/code/ButtonListener/makefile
@@ -1,7 +1,7 @@
-run:
-	sudo java -classpath .:classes:/opt/pi4j/lib/'*' ButtonListener
+run: ./ButtonListener.class
+	sudo java -classpath .:classes:/opt/pi4j/lib/'*' ButtonListener 1
 
-compile:
+compile: ./ButtonListener.java
 	javac -classpath .:classes:/opt/pi4j/lib/'*' ButtonListener.java
 
 clean:
